--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
     </div>
-    <div class="img-row">
+    <div class="img-row" id="funn">
       <div class="pic-1"><img src="images/h_cat_1.jpg" style="width: 100%;">
         <h3 class="text-sellers">Bestsellers</h3>
         <button class="shopnow2">SHOP NOW</button>
